copy of code from own codesandbox - changes done to font, spacing and imgs
codesandbox of previous project:  https://2b1ew.csb.app/

--- a/about.html
+++ b/about.html
@@ -39,5 +39,41 @@
           </div>
         </div>
       </nav>
+      <br />
+      <br />
+      <br />
+      <br />
+      <h1 class="text-center">About me</h1>
+    <h3 class="text-center">Front-end developer & web designer from Lyon, France</h3>
+    <div class="about-paragraphs text-center">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+      </p>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded" />
+        </div>
+        <div class="col-sm-3">
+          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded" />
+        </div>
+        <div class="col-sm-3">
+          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded" />
+        </div>
+        <div class="col-sm-3">
+          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded" />
+        </div>
+      </div>
+    </div>
+    <div id="contact" class="mt-5">
+      <h2 class="text-center"> 📧 Get In Touch</h2>
+      <a href="mailto:ravennisisannibal@gmail.com" class="email-link">
+        ravennisisannibal@gmail.com
+      </a>
+    </div>
 </body>
 </html>
