--- a/index.html
+++ b/index.html
@@ -40,5 +40,85 @@
           </div>
         </div>
       </nav>
+      <br />
+      <br />
+      <br />
+      <br />
+      <h2 class="text-center"> Hi.</h2>
+    <h1 class="text-center"> I'm Ravenn Annibal-Arnulf.</h1>
+    <h3 class="text-center">Front-end developer & web designer from Lyon, France</h3>
+    <div class="navigation-links mb-5">
+      <a href="about.html#contact" class="primary-link">Contact me</a>
+      <a href="about.html" class="secondary-link">About me</a>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <img src="/word findr project pic.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-6">
+          <h2 class="mb-3">Word Findr</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="https://tender-nightingale-893e5f.netlify.app/" class="primary-link" target="_blank">Launch Word Findr</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-6">
+          <h2 class="mb-3">React Weather App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="https://sharp-stonebraker-756440.netlify.app/" class="primary-link" target="_blank">Launch React Weather App</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="/react weather project pic.png" class="img-fluid rounded" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded" />
+        </div>
+        <div class="col-6">
+          <h2 class="mb-3">Vanilla Weather App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="https://vigilant-noether-c9462d.netlify.app" class="primary-link" target="_blank">Launch Vanilla Weather App</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-6">
+          <h2 class="mb-3">Calathea Project Page</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/181/990/original/FinalProject1.html?1608134761" class="primary-link" target="_blank">Launch Calathea Page</a>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="/Calathea Project Pic.png" class="img-fluid rounded" />
+        </div>
+      </div>
 </body>
 </html>
