changes for SEO

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="/word findr project pic.png" class="img-fluid rounded" />
+          <img src="/word findr project pic.png" class="img-fluid rounded" alt="word findr project picture" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Word Findr</h2>
@@ -83,12 +83,12 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="/react weather project pic.png" class="img-fluid rounded" />
+          <img src="/react weather project pic.png" class="img-fluid rounded" alt="react weather app picture"/>
         </div>
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded" />
+          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-6">
           <h2 class="mb-3">Vanilla Weather App</h2>
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="/Calathea Project Pic.png" class="img-fluid rounded" />
+          <img src="/Calathea Project Pic.png" class="img-fluid rounded" alt="calathea project picture"/>
         </div>
       </div>
 </body>
