--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/styles.css">
-    <title>Ravenn A-A: Portfolio About Section</title>
+    <title>Ravenn A-A: Portfolio About Me</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -56,16 +56,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded" alt="word findr project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded" alt="react weather app picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded" />
+          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded" alt="calathea project picture"/>
         </div>
       </div>
     </div>
