final changes - responsiveness + css styling

--- a/about.html
+++ b/about.html
@@ -39,10 +39,6 @@
           </div>
         </div>
       </nav>
-      <br />
-      <br />
-      <br />
-      <br />
       <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer & web designer from Lyon, France</h3>
     <div class="about-paragraphs text-center">
@@ -56,16 +52,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded" alt="word findr project picture"/>
+          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="word findr project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded" alt="react weather app picture"/>
+          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="react weather app picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded" alt="vanilla weather app project picture"/>
+          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded" alt="calathea project picture"/>
+          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="calathea project picture"/>
         </div>
       </div>
     </div>
@@ -75,5 +71,8 @@
         ravennisisannibal@gmail.com
       </a>
     </div>
+    <br />
+    <br />
+    <br />
 </body>
 </html>
