--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
           </div>
         </div>
       </nav>
-      <br />
-      <br />
-      <br />
-      <br />
       <h2 class="text-center"> Hi.</h2>
     <h1 class="text-center"> I'm Ravenn Annibal-Arnulf.</h1>
     <h3 class="text-center">Front-end developer & web designer from Lyon, France</h3>
@@ -54,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="/word findr project pic.png" class="img-fluid rounded" alt="word findr project picture" />
+          <img src="/word findr project pic.png" class="img-fluid rounded d-none d-sm-block" alt="word findr project picture" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Word Findr</h2>
@@ -65,7 +61,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="https://tender-nightingale-893e5f.netlify.app/" class="primary-link" target="_blank">Launch Word Findr</a>
+            <a href="https://tender-nightingale-893e5f.netlify.app/" class="primary-link project-link" target="_blank">Launch Word Findr</a>
           </div>
         </div>
       </div>
@@ -79,16 +75,16 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="https://sharp-stonebraker-756440.netlify.app/" class="primary-link" target="_blank">Launch React Weather App</a>
+            <a href="https://sharp-stonebraker-756440.netlify.app/" class="primary-link project-link" target="_blank">Launch React Weather App</a>
           </div>
         </div>
         <div class="col-6">
-          <img src="/react weather project pic.png" class="img-fluid rounded" alt="react weather app picture"/>
+          <img src="/react weather project pic.png" class="img-fluid rounded d-none d-sm-block" alt="react weather app picture"/>
         </div>
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded" alt="vanilla weather app project picture"/>
+          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded d-none d-sm-block" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-6">
           <h2 class="mb-3">Vanilla Weather App</h2>
@@ -99,7 +95,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="https://vigilant-noether-c9462d.netlify.app" class="primary-link" target="_blank">Launch Vanilla Weather App</a>
+            <a href="https://vigilant-noether-c9462d.netlify.app" class="primary-link project-link" target="_blank">Launch Vanilla Weather App</a>
           </div>
         </div>
       </div>
@@ -113,12 +109,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/181/990/original/FinalProject1.html?1608134761" class="primary-link" target="_blank">Launch Calathea Page</a>
+            <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/181/990/original/FinalProject1.html?1608134761" class="primary-link project-link" target="_blank">Launch Calathea Page</a>
           </div>
         </div>
         <div class="col-6">
-          <img src="/Calathea Project Pic.png" class="img-fluid rounded" alt="calathea project picture"/>
+          <img src="/Calathea Project Pic.png" class="img-fluid rounded d-none d-sm-block" alt="calathea project picture"/>
         </div>
       </div>
+      <br />
+      <br />
 </body>
 </html>
