final touches - change of img sources

--- a/about.html
+++ b/about.html
@@ -52,16 +52,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="/word findr project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="word findr project picture"/>
+          <img src="/imgs/word findr project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="word findr project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/react weather project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="react weather app picture"/>
+          <img src="/imgs/react weather project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="react weather app picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="vanilla weather app project picture"/>
+          <img src="/imgs/Vanilla weather app project pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-sm-3">
-          <img src="/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="calathea project picture"/>
+          <img src="/imgs/Calathea Project Pic.png" class="img-fluid p-2 shadow rounded mb-4" alt="calathea project picture"/>
         </div>
       </div>
     </div>
