--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="/word findr project pic.png" class="img-fluid rounded d-none d-sm-block" alt="word findr project picture" />
+          <img src="/imgs/word findr project pic.png" class="img-fluid rounded d-none d-sm-block" alt="word findr project picture" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Word Findr</h2>
@@ -79,12 +79,12 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="/react weather project pic.png" class="img-fluid rounded d-none d-sm-block" alt="react weather app picture"/>
+          <img src="/imgs/react weather project pic.png" class="img-fluid rounded d-none d-sm-block" alt="react weather app picture"/>
         </div>
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="/Vanilla weather app project pic.png" class="img-fluid rounded d-none d-sm-block" alt="vanilla weather app project picture"/>
+          <img src="imgs/Vanilla weather app project pic.png" class="img-fluid rounded d-none d-sm-block" alt="vanilla weather app project picture"/>
         </div>
         <div class="col-6">
           <h2 class="mb-3">Vanilla Weather App</h2>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="/Calathea Project Pic.png" class="img-fluid rounded d-none d-sm-block" alt="calathea project picture"/>
+          <img src="imgs/Calathea Project Pic.png" class="img-fluid rounded d-none d-sm-block" alt="calathea project picture"/>
         </div>
       </div>
       <br />
